[package]
name = "rgb5"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.23", features = ["derive"] }
image = "0.24.4"

[profile.release]
strip = true
lto = true
panic = "abort"
codegen-units = 1